Add new entries and dummy values to DOWNLOAD and ONLINE properties sheets

--- a/templates/ONLINE.properties
+++ b/templates/ONLINE.properties
@@ -1,5 +1,7 @@
 keyword = KEYWORD1
 
+contentType = GAME
+
 firstReleaseDateSW5.0.description = default
 firstReleaseDateSW5.0.value = DATE1 8:30:00 AM
 
@@ -21,14 +23,11 @@ genreFourSW6.5.value =
 doubleClickTag.6.description = default
 doubleClickTag.6.value = sw.nol/GENRE1/KEYWORD1/;gw=GENRE1;sec_0=KEYWORD1;u=|gw-GENRE1|sec_0-KEYWORD1;
 
-
 # Puzzle        Sports            Time Management   Daily Games
 # Jigsaws       Adventure         Matching          Car Racing
 # Action        Card & Board      Hidden Object
 # Strategy      Word              Family & Kids
 # Racing        Shooters          Music & Photos
-
-
 
 landingLinkSW5.7.description = default
 landingLinkSW5.7.value = /gamelanding/KEYWORD1.jsp
@@ -36,42 +35,79 @@ landingLinkSW5.7.value = /gamelanding/KEYWORD1.jsp
 productSkuSW6.8.description = default
 productSkuSW6.8.value = KEYWORD1-pc
 
+title.9.description = default
+title.9.value = FULL_TITLE1
 
+shortTitle.10.description = default
+shortTitle.10.value = SHORT_TITLE1
+
+shortSynopsis.11.description = default
+shortSynopsis.11.value = SHORT_SYNOPSIS1
+
+mediumSynopsis.12.description = default
+mediumSynopsis.12.value = SHORT_SYNOPSIS1
+
+synopsis.13.description = default
+synopsis.13.value = FULL_SYNOPSIS1
+
+minimumSystemRequirements.14.description = default
+minimumSystemRequirements.14.value = MSR1
+
+credits.15.description = default
+credits.15.value = CREDITS1
+
+searchWords.16.description = default
+searchWords.16.value = SEARCH_WORDS1
+
+instructions.17.description = default
+instructions.17.value = INSTRUCTIONS1
+
+seoTitle.18.description = default
+seoTitle.18.value = SEO_TITLE1
+
+metaDescription.19.description = default
+metaDescription.19.value = META_DESCRIPTION1
+
+metaKeywords.20.description = default
+metaKeywords.20.value = META_KEYWORDS1
+
+upsellCopy.21.description = default
+upsellCopy.21.value = FULL_SYNOPSIS1
 
 # standard for all OL games;
 
-hasHighScoreSW5.9.description = default
-hasHighScoreSW5.9.value = false
+hasHighScoreSW5.22.description = default
+hasHighScoreSW5.22.value = false
 
-hasRatingSW5.10.description = default
-hasRatingSW5.10.value = true
+hasRatingSW5.23.description = default
+hasRatingSW5.23.value = true
 
-hasReviewSW5.11.description = default
-hasReviewSW5.11.value = true
+hasReviewSW5.24.description = default
+hasReviewSW5.24.value = true
 
-hasOnlineVersionSW5.12.description = default
-hasOnlineVersionSW5.12.value = true
+hasOnlineVersionSW5.25.description = default
+hasOnlineVersionSW5.25.value = true
 
-hasPremiumOnlineVersionSW5.13.description = default
-hasPremiumOnlineVersionSW5.13.value = false
+hasPremiumOnlineVersionSW5.26.description = default
+hasPremiumOnlineVersionSW5.26.value = false
 
-hasDownloadTrialVersionSW5.14.description = default
-hasDownloadTrialVersionSW5.14.value = false
+hasDownloadTrialVersionSW5.27.description = default
+hasDownloadTrialVersionSW5.27.value = false
 
-hasDownloadPurchaseVersionSW5.15.description = default
-hasDownloadPurchaseVersionSW5.15.value = false
+hasDownloadPurchaseVersionSW5.28.description = default
+hasDownloadPurchaseVersionSW5.28.value = false
 
-isMultiplayerGameSW5.16.description = default
-isMultiplayerGameSW5.16.value = false
+isMultiplayerGameSW5.29.description = default
+isMultiplayerGameSW5.29.value = false
 
-isSearchableSW5.17.description = default
-isSearchableSW5.17.value = true
+isSearchableSW5.30.description = default
+isSearchableSW5.30.value = true
 
-highScoreIdSW5.18.description = default
-highScoreIdSW5.18.value = null
+highScoreIdSW5.31.description = default
+highScoreIdSW5.31.value = null
 
-isChatEnabledSW5.19.description = default
-isChatEnabledSW5.19.value = true
+isChatEnabledSW5.32.description = default
+isChatEnabledSW5.32.value = true
 
 
 
