--- a/templates/ONLINE.properties
+++ b/templates/ONLINE.properties
@@ -12,7 +12,7 @@ genreOneSW6.2.description = default
 genreOneSW6.2.value = GENRE1
 
 genreTwoSW6.3.description = default
-genreTwoSW6.3.value = 
+genreTwoSW6.3.value = GENRE2
 
 genreThreeSW6.4.description = default
 genreThreeSW6.4.value = 
@@ -63,13 +63,13 @@ instructions.17.description = default
 instructions.17.value = INSTRUCTIONS1
 
 seoTitle.18.description = default
-seoTitle.18.value = SEO_TITLE1
+seoTitle.18.value = FULL_TITLE1 - GENRE1 games on Shockwave.com
 
 metaDescription.19.description = default
 metaDescription.19.value = META_DESCRIPTION1
 
 metaKeywords.20.description = default
-metaKeywords.20.value = META_KEYWORDS1
+metaKeywords.20.value = FULL_TITLE1, GENRE1 Games
 
 upsellCopy.21.description = default
 upsellCopy.21.value = FULL_SYNOPSIS1
